--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #3498db;
+  --primary-color: #000f45;
   --secondary-color: #2ecc71;
   --text-color: #333;
   --background-color: #f4f4f4;
